# AoiTalk

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  check_db.py  docker-compose.yml  latest.json  main.py  pyproject.toml  pytest.ini  run.bat  setup.bat
.github/workflows/: test.yml
config/: config.docker.yaml  config.yaml  mobile_ui.yaml
config/characters/: aivisspeech_example.yaml  aivoice_sample.yaml  cevio_sasara.yaml  cevio_tsudumi.yaml  kotonoha_aoi.yaml  nijivoice_sample.yaml  qwen3_character_example.yaml  tohoku_kiritan.yaml  zundamon.yaml
config/cloning/: ずんだもん.txt
config/profiles/: enterprise.yaml  personal.yaml
docs/: DISCORD_BOT_SETUP.md  docker_setup.md  qwen3_auto_registration.md  rag-index-guide.md  setup_guide.md
scripts/: build_rag_index.py  clickup_mcp_server.py  debug_clickup.py  export_conversation_logs_csv.py  force_reset_database.py  generate_ssl_cert.py  init-db.sql  manage_qwen3_voices.py  media_mcp_server.py  memory_rag_mcp_server.py  os_operations_mcp_server.py  setup_database.sh  utility_mcp_server.py  web_search_mcp_server.py  workspace_mcp_server.py  x_search_mcp_server.py
scripts/backup/: README.md  backup_to_huggingface.py  restore_from_huggingface.py
src/: __init__.py  config.py  config_validator.py  crawler_status.py  features.py
src/agents/: __init__.py  base.py  spotify_agent.py
src/api/: __init__.py  auth_service.py  conversation_routes.py  feedback.py  git_routes.py  heartbeat_routes.py  project_routes.py  rag_collection_routes.py  server.py  skill_routes.py  video_http_server.py  web_interface.py
src/assistant/: __init__.py  base.py  base_v2.py  factory.py  response_handler.py  voice_handler.py
src/audio/: __init__.py  base.py  hallucination_filter.py  manager.py  player.py  recorder.py
src/bot/: __init__.py  discord_bot.py  discord_bot_mock.py
src/heartbeat/: __init__.py  loader.py  models.py  registry.py  runner.py
src/llm/: __init__.py  cli_llm_client.py  gemini_agent_engine.py  gemini_engine.py  manager.py  prompts.py  sglang_engine.py
src/memory/: __init__.py  clickup_sync.py  config.py  conversation_repository.py  cross_session_memory.py  database.py  embedding.py  feedback_repository.py  history.py  login_log_repository.py  manager.py  models.py  project_repository.py  rag_collection_repository.py  repository.py  semantic_memory.py  services.py  user_repository.py
src/mode_switch/: __init__.py  manager.py
src/models/: __init__.py  audio_models.py  config_models.py  message_models.py
src/rag/: __init__.py  config.py  embedding.py  index_task_manager.py  indexer.py  manager.py  qdrant_client.py  reranker.py  retriever.py
src/reasoning/: __init__.py  evaluator.py  executor.py  generator.py  manager.py  (+3 more)
tests/: conftest.py  manual_vision_test.py  test_api_smoke.py  test_audio.py  test_basic_tools.py  test_config_loading.py  test_config_validator.py  test_features.py  test_image_gen_tool.py  test_memory.py  test_models.py  test_rag_access_control.py  test_rag_config.py  test_rag_indexer.py  test_tools.py  test_utils.py  verify_fixes.py
(+182 files in other folders)
